feat: add user handlers first docs in swagger
